GN-30 Fix spacing issue with autocomplete suggestions
Design system has padding round mark tags by default so
we need to remove them for the suggestions

--- a/src/Header/Search/Autocomplete/Autocomplete.module.scss
+++ b/src/Header/Search/Autocomplete/Autocomplete.module.scss
@@ -122,6 +122,7 @@
         background: 0;
         color: inherit;
         font-weight: bold;
+        padding: 0;
       }
     }
 
